<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tab1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="315sp"
        android:background="@color/hijau_tosca"
        android:text="@string/horror"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="345dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/thenun"
        app:srcCompat="@drawable/thenun" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="690sp"
        android:layout_marginLeft="325sp"
        android:id="@+id/playthenun"
        android:text="@string/play"
        android:clickable="true"
        android:contentDescription="@string/thenun"/>
</FrameLayout>