<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tab3">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="345sp"
        android:background="@color/hijau_tosca"
        android:text="@string/ilmiah"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="345dp"
        android:layout_marginTop="25sp"
        android:contentDescription="@string/interstellar"
        app:srcCompat="@drawable/interstellar" />

    <Button
        android:id="@+id/playinter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="690sp"
        android:layout_marginLeft="325sp"
        android:text="@string/play"
        android:clickable="true"
        android:contentDescription="@string/interstellar"/>

</FrameLayout>